--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -79,14 +79,14 @@
     position: absolute;
     right: 3%;
     top: 3%;
-
+    z-index: 999;
     span {
       font-size: 2vw;
     }
   }
 
   form {
-    h3 {
+    h5 {
       margin: auto 1% auto 1%;
     }
   }
@@ -136,6 +136,7 @@
       border-radius: 2px;
       padding: 1vw;
       margin-bottom: 3%;
+      background-color: #0075ff24;
 
       .btn-right {
         float: right;
@@ -147,7 +148,11 @@
 
       .project-info {
         text-align: left;
-        width: 80%;
+        width: 100%;
+      }
+
+      .info-header {
+        width: 2%;
       }
 
       .table.totals-table {
@@ -181,6 +186,7 @@
     margin-top: 1%;
     box-shadow: 10px 0 40px 2px rgba(0, 0, 0, 0.37);
     -webkit-box-shadow: 10px 0 40px 2px rgba(0, 0, 0, 0.37);
+    background-color: white;
 
     .small-column {
       width: 15%
@@ -192,6 +198,10 @@
 
     .buttons-cell {
       width: 10%;
+    }
+
+    .btn-info {
+      line-height: 0.9;
     }
 
     .center-cell {
@@ -219,7 +229,7 @@
 
       th, td {
         vertical-align: middle;
-        padding: 0.65rem;
+        padding: 0.4rem 0.65rem 0.4rem 0.65rem;
         border-top: 0.05px solid rgba(0, 0, 0, 0.17);
       }
 
