--- a/app/views/layouts/pdf.html.html.erb
+++ b/app/views/layouts/pdf.html.html.erb
@@ -2,8 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8"/>
-  <title>Facture</title>
-    <%= wicked_pdf_stylesheet_link_tag "pdf" %>
+  <% if @invoice %>
+    <title><%= t('invoice') + "_#{@invoice.display_number}" %></title>
+  <% end %>
+  <% if @quotation %>
+    <title><%= t('quotation') + "_#{@quotation.id}" %></title>
+  <% end %>
+  <%= wicked_pdf_stylesheet_link_tag "pdf" %>
 </head>
 <%= yield %>
 </html>
