--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -2,7 +2,7 @@
   <span aria-hidden="true">&times;</span>
 </button>
 
-<%= form_with(model: @project, local: true, class: "needs-validation") do |form| %>
+<%= form_with(model: @project, local: true) do |form| %>
   <div class="form center-div">
 
     <% if @project.id %>
@@ -25,7 +25,7 @@
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
         <%= form.label t('date_locale') %>
         <div class="input-group mb-3">
-          <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
+          <%= form.text_field :date, "data-provide" => 'datepicker', "data-date-format" => "dd/mm/yyyy", value: @project.date ? l(@project.date) : Time.zone.now.to_date.strftime("%d/%m/%Y"), autocomplete: 'off', id: "dateProject", class: "form-control" %>
           <div class="input-group-append">
             <div class="input-group-text">
               <%= fa_icon "calendar" %>
@@ -37,7 +37,6 @@
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-3 col-xl-3">
         <%= form.label t('Name') %>
         <%= form.text_field :name, class: "form-control", :required => true, autocomplete: 'nope' %>
-        <div class="invalid-feedback">Example invalid custom select feedback</div>
       </div>
     </div>
 
