--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,7 +6,7 @@
       </td>
       <td>
         <h2 id="titleBadge" display=<%= controller_name %>>
-          <%= t('project').pluralize %>
+          <%= t(controller_name).to_s %>
         </h2>
       </td>
       <td>
@@ -15,10 +15,11 @@
   </table>
 </div>
 <hr>
+
 <%= search_form_for @search do |form| %>
   <div class="form">
     <div class="row">
-      <h3> <%= form.label t('filtres') %> </h3>
+      <h5> <%= form.label t('filtres') %> </h5>
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('project') %>
         <%= form.collection_select :id_eq, Project.all, :id, :name, {:include_blank => t('all_projects')}, {class: 'form-control', id: 'project_sort', onchange: 'this.form.submit();'} %>
