--- a/app/views/wares/_form.html.erb
+++ b/app/views/wares/_form.html.erb
@@ -11,6 +11,8 @@
       <h3><%= t('creating_wares') %></h3>
     <% end %>
 
+    <%= form.hidden_field :id, value: @ware.id || 0 , id: "ware_id"%>
+
     <div class="form-row">
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('project') %>
@@ -22,7 +24,7 @@
       </div>
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('status') %>
-        <%= form.select :status, Ware.translated_statuses.map {|status| [status[0], status[1], {customer: status[1]}]}, {:include_blank => true}, {class: 'form-control', id: 'status_edit_select'} %>
+        <%= form.select :status, Ware.translated_statuses.map {|status| [status[0], status[1], {status: status[1]}]}, {:include_blank => true}, {class: 'form-control', id: 'status_edit_select'} %>
       </div>
     </div>
     <hr>
@@ -100,7 +102,7 @@
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('Quantity') %>
-        <%= form.text_field :quantity, class: "form-control", autocomplete: 'nope', id: 'quantity', value: "1" %>
+        <%= form.text_field :quantity, class: "form-control", autocomplete: 'nope', id: 'quantity', value: @ware.quantity || "1" %>
       </div>
 
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
@@ -134,7 +136,7 @@
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('tva_rate') %>
         <div class="input-group mb-3">
-          <%= form.text_field :tva_rate, value: '21', class: "form-control", autocomplete: 'nope', id: 'tva_rate' %>
+          <%= form.text_field :tva_rate, value: @ware.tva_rate || '21', class: "form-control", autocomplete: 'nope', id: 'tva_rate' %>
           <div class="input-group-append">
             <div class="input-group-text">
               <%= fa_icon "percent" %>
