--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -79,22 +79,22 @@
               <table class="table table-hover table-striped avoidbreak">
                 <thead class=thead-dark>
                 <tr>
-                  <th><%= t('Name') %></th>
-                  <th><%= t('duration') %></th>
-                  <th><%= t('hourly_rate') + ' (€)' %></th>
-                  <th><%= t('tva_rate') + ' (%)' %></th>
-                  <th><%= t('total_gross') + ' (€)' %></th>
+                  <th class="name-cell"><%= t('Name') %></th>
+                  <th class="quantity-cell"><%= t('duration') %></th>
+                  <th class="number-cell"><%= t('hourly_rate') + ' (€)' %></th>
+                  <th class="number-cell"><%= t('tva_rate') + ' (%)' %></th>
+                  <th class="number-cell"><%= t('total_gross') + ' (€)' %></th>
                 </tr>
                 </thead>
 
                 <tbody>
                 <% project.services.each do |service| %>
-                  <tr data-link="<%= edit_service_path service %>">
-                    <td><%= service.name %></td>
-                    <td><%= service.duration.strftime('%H:%M') %></td>
-                    <td><%= service.hourly_rate %></td>
-                    <td><%= service.tva_rate %></td>
-                    <td><%= service.total_gross %></td>
+                  <tr>
+                    <td class="name-cell"><%= service.name %></td>
+                    <td class="quantity-cell"><%= service.duration.strftime('%H:%M') %></td>
+                    <td class="number-cell"><%= number_with_precision service.hourly_rate, :precision => 2 %></td>
+                    <td class="number-cell"><%= number_with_precision service.tva_rate, :precision => 2 %></td>
+                    <td class="number-cell"><%= number_with_precision service.total_gross, :precision => 2 %></td>
                   </tr>
                 <% end %>
                 </tbody>
@@ -108,22 +108,22 @@
               <table class="table table-hover table-striped">
                 <thead class=thead-dark>
                 <tr>
-                  <th><%= t('ware_name') %></th>
-                  <th><%= t('Quantity') %></th>
-                  <th><%= t('sell_price') + ' (€)' %></th>
-                  <th><%= t('tva_rate') + ' (%)' %></th>
-                  <th><%= t('total_gross') + ' (€)' %></th>
+                  <th class="name-cell"><%= t('ware_name') %></th>
+                  <th class="quantity-cell"><%= t('Quantity') %></th>
+                  <th class="number-cell"><%= t('sell_price') + ' (€)' %></th>
+                  <th class="number-cell"><%= t('tva_rate') + ' (%)' %></th>
+                  <th class="number-cell"><%= t('total_gross') + ' (€)' %></th>
                 </tr>
                 </thead>
 
                 <tbody>
                 <% project.wares.each do |ware| %>
-                  <tr data-link="<%= edit_ware_path ware %>">
-                    <td><%= ware.ware_name %></td>
-                    <td><%= ware.quantity %></td>
-                    <td><%= ware.sell_price %></td>
-                    <td><%= ware.tva_rate %></td>
-                    <td><%= ware.total_gross %></td>
+                  <tr>
+                    <td class="name-cell"><%= ware.ware_name %></td>
+                    <td class="quantity-cell"><%= ware.quantity %></td>
+                    <td class="number-cell"><%= number_with_precision ware.sell_price, :precision => 2 %></td>
+                    <td class="number-cell"><%= number_with_precision ware.tva_rate, :precision => 2 %></td>
+                    <td class="number-cell"><%= number_with_precision ware.total_gross, :precision => 2 %></td>
                   </tr>
                 <% end %>
                 </tbody>
@@ -138,12 +138,11 @@
               <table class="table table-hover table-striped">
                 <thead class=thead-dark>
                 <tr>
-                  <th><%= t('Name') %></th>
-                  <th><%= t('unit') %></th>
-                  <th><%= t('unit_price') + ' (€)' %></th>
-                  <th><%= t('quantity') %></th>
-                  <th><%= t('tva_rate') + ' (%)' %></th>
-                  <th><%= t('total_gross') + ' (€)' %></th>
+                  <th class="name-cell"><%= t('Name') %></th>
+                  <th class="quantity-cell"><%= t('quantity') %></th>
+                  <th class="number-cell"><%= t('unit_price') + ' (€)' %></th>
+                  <th class="number-cell"><%= t('tva_rate') + ' (%)' %></th>
+                  <th class="number-cell"><%= t('total_gross') + ' (€)' %></th>
                 </tr>
                 </thead>
 
@@ -154,13 +153,12 @@
                   </tr>
                 <% end %>
                 <% project.project_extra_lines.each do |project_extra_line| %>
-                  <tr data-link="<%= edit_project_extra_line_path project_extra_line %>">
-                    <td><%= project_extra_line.extra.name %></td>
-                    <td><%= project_extra_line.extra.unit %></td>
-                    <td><%= project_extra_line.extra.unit_price %></td>
-                    <td><%= project_extra_line.quantity %></td>
-                    <td><%= project_extra_line.extra.tva_rate %></td>
-                    <td><%= project_extra_line.total_gross %></td>
+                  <tr>
+                    <td class="name-cell"><%= project_extra_line.extra.name %></td>
+                    <td class="quantity-cell"><%= project_extra_line.quantity.to_s+' '+project_extra_line.extra.unit %></td>
+                    <td class="number-cell"><%= number_with_precision project_extra_line.extra.unit_price, :precision => 2 %></td>
+                    <td class="number-cell"><%= number_with_precision project_extra_line.extra.tva_rate, :precision => 2 %></td>
+                    <td class="number-cell"><%= number_with_precision project_extra_line.total_gross, :precision => 2 %></td>
                   </tr>
                 <% end %>
                 </tbody>
@@ -169,7 +167,7 @@
           </div>
         </section>
 
-        <% if !(@invoice.projects.length == 1 && @invoice.wares.length == 0) %>
+        <% unless @invoice.projects.length == 1 && @invoice.wares.length == 0 %>
           <section id="sums" class="sums_project">
             <table cellpadding="0" cellspacing="0">
               <tr class="amount-total">
@@ -192,7 +190,6 @@
         <% end %>
       <% end %>
     <% end %>
-    </section>
     <section id="items" class="wares avoidbreak">
       <% if @invoice.wares.any? %>
         <% if @invoice.projects.any? %>
@@ -205,22 +202,22 @@
         <table class="table table-hover table-striped">
           <thead class=thead-dark>
           <tr>
-            <th><%= t('ware_name') %></th>
-            <th><%= t('Quantity') %></th>
-            <th><%= t('sell_price') + ' (€)' %></th>
-            <th><%= t('tva_rate') + ' (%)' %></th>
-            <th><%= t('total_gross') + ' (€)' %></th>
+            <th class="name-cell"><%= t('ware_name') %></th>
+            <th class="quantity-cell"><%= t('Quantity') %></th>
+            <th class="number-cell"><%= t('sell_price') + ' (€)' %></th>
+            <th class="number-cell"><%= t('tva_rate') + ' (%)' %></th>
+            <th class="number-cell"><%= t('total_gross') + ' (€)' %></th>
           </tr>
           </thead>
 
           <tbody>
           <% @invoice.wares.each do |ware| %>
-            <tr data-link="<%= edit_ware_path ware %>">
-              <td><%= ware.ware_name %></td>
-              <td><%= ware.quantity %></td>
-              <td><%= ware.sell_price %></td>
-              <td><%= ware.tva_rate %></td>
-              <td><%= ware.total_gross %></td>
+            <tr>
+              <td class="name-cell"><%= ware.ware_name %></td>
+              <td class="quantity-cell"><%= ware.quantity %></td>
+              <td class="number-cell"><%= number_with_precision ware.sell_price, :precision => 2 %></td>
+              <td class="number-cell"><%= number_with_precision ware.tva_rate, :precision => 2 %></td>
+              <td class="number-cell"><%= number_with_precision ware.total_gross, :precision => 2 %></td>
             </tr>
           <% end %>
           </tbody>
